Closed Bug 578773 Opened 15 years ago Closed 15 years ago

Jetpack children should send messages about uncaught exceptions to the parent

Categories

(Core :: XPCOM, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: benjamin, Assigned: benjamin)

Details

Attachments

(1 file)

Jetpack children should send messages about uncaught exceptions to the parent: if nothing else, we can display them in the error console.
Attachment #457374 - Flags: review?(bent.mozilla)
Comment on attachment 457374 [details] [diff] [review] Propagate jetpack errors, rev. 1 >+ jsval msgstr = STRING_TO_JSVAL(JS_NewStringCopyZ(cx, message)); There's |report->ucmessage| which you should use if it's available. |message| is only supposed to be used if |report->ucmessage| is null I think.
Attachment #457374 - Flags: review?(bent.mozilla) → review+
blocking2.0: --- → betaN+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: