Bug 578773 - Jetpack processes should send messages about uncaught exceptions to the parent, r=bent