js/jetpack/tests/unit/impl.js
@@ -81,3 +81,7 @@ registerReceiver("test sandbox", function() {
 
   sendMessage("sandbox done");
 });
+
+registerReceiver("throw", function(msgName) {
+  throw new Error("throwing on request");
+});
